fix for calendar z-index issue on timeline view

--- a/app/assets/stylesheets/app/timeline.scss
+++ b/app/assets/stylesheets/app/timeline.scss
@@ -7,7 +7,6 @@
   position:relative;
   margin-top:8px;
   width:920px;
-  z-index:9999;
 }
 
 .timeline-schedule {
